avoids one unnecessary construction of a new Double